rf down tests